force-app/main/default/objects/CCX_PurchaseOrder__c/CCX_PurchaseOrder__c.object-meta.xml
<CustomObject>
    <label>CCX_Purchase Order</label>
    <nameField>
        <displayFormat>PuId-{000}</displayFormat>
        <label>PuId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCX_Purchase Order</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>