force-app/main/default/objects/CCX_PurchaseOrder__c/fields/CCX_Employee__c.field-meta.xml
<CustomField>
    <fullName>CCX_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCX_Employee</label>
    <referenceTo>CCX_Employee__c</referenceTo>
    <relationshipLabel>CCX_Purchase Order</relationshipLabel>
    <relationshipName>CCX_Purchase_Order</relationshipName>
    <type>Lookup</type>
</CustomField>