force-app/main/default/objects/CCX_PurchaseOrder__c/fields/CCX_Product__c.field-meta.xml
<CustomField>
    <fullName>CCX_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCX_Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CCX_Product__c.Status__c</field>
            <operation>equals</operation>
            <value>Reorder</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CCX_Product__c</referenceTo>
    <relationshipLabel>CCX_Purchase Order</relationshipLabel>
    <relationshipName>CCX_Purchase_Order</relationshipName>
    <type>Lookup</type>
</CustomField>