force-app/main/default/objects/CCX_PurchaseOrder__c/fields/CCX_Supplier__c.field-meta.xml
<CustomField>
    <fullName>CCX_Supplier__c</fullName>
    <label>CCX_Supplier</label>
    <referenceTo>CCX_Supplier__c</referenceTo>
    <relationshipLabel>CCX_Purchase Order</relationshipLabel>
    <relationshipName>CCX_Purchase_Order</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>