force-app/main/default/objects/CCX_PurchaseOrder__c/fields/DateOfPurchase__c.field-meta.xml
<CustomField>
    <fullName>DateOfPurchase__c</fullName>
    <label>DateOfPurchase</label>
    <type>Date</type>
</CustomField>