force-app/main/default/objects/CCX_PurchaseOrder__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <formula>IF( Purchase_Total__c &gt;20000,0.25,
   IF( Purchase_Total__c &gt;15000,0.20,
     
    IF( Purchase_Total__c &gt;10000,0.10,0)



)
   





)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>