force-app/main/default/objects/CCX_PurchaseOrder__c/fields/Net_Purchase_Total__c.field-meta.xml
<CustomField>
    <fullName>Net_Purchase_Total__c</fullName>
    <formula>Purchase_Total__c -( Purchase_Total__c *  Discount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Purchase Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>