force-app/main/default/objects/CCX_PurchaseOrder__c/fields/P_Quantity__c.field-meta.xml
<CustomField>
    <fullName>P_Quantity__c</fullName>
    <label>PQuantity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>