force-app/main/default/objects/CCX_PurchaseOrder__c/fields/Purchase_Total__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Total__c</fullName>
    <formula>P_Quantity__c *  Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>