force-app/main/default/objects/CCX_PurchaseOrder__c/validationRules/Purchase_order_quanity_less_than_reorder.validationRule-meta.xml
<ValidationRule>
    <fullName>Purchase_order_quanity_less_than_reorder</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(P_Quantity__c &lt;= CCX_Product__r.ReorderQty__c)</errorConditionFormula>
    <errorDisplayField>P_Quantity__c</errorDisplayField>
    <errorMessage>Purchase Order quanity should not exceed</errorMessage>
</ValidationRule>