force-app/main/default/objects/CCX_PurchaseOrder__c/validationRules/Purchase_Order_quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Purchase_Order_quantity</fullName>
    <active>true</active>
    <errorConditionFormula>P_Quantity__c +   CCX_Product__r.CurrentQuantity__c  &gt; CCX_Product__r.MaxQuantity__c</errorConditionFormula>
    <errorDisplayField>P_Quantity__c</errorDisplayField>
    <errorMessage>PQuantiy should not excced max quantiy</errorMessage>
</ValidationRule>