force-app/main/default/objects/CCX_PurchaseOrder__c/validationRules/qunatity_must_not_be_less_than_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>qunatity_must_not_be_less_than_zero</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL(P_Quantity__c)</errorConditionFormula>
    <errorDisplayField>P_Quantity__c</errorDisplayField>
    <errorMessage>quantity must not be less than zero</errorMessage>
</ValidationRule>