force-app/main/default/objects/CCX_PurchaseOrder__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Purchase_Status__c</columns>
    <columns>Purchase_Total__c</columns>
    <columns>Discount__c</columns>
    <columns>Net_Purchase_Total__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>